chore: fixing various sonar findings